--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   resize: ^1.0.0
   tuple: ^2.0.2
   json_annotation: ^4.8.1
+  firebase_core: ^2.24.0
 
 dev_dependencies:
   flutter_test:
