--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   tuple: ^2.0.2
   json_annotation: ^4.8.1
   firebase_core: ^2.24.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
