--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   json_annotation: ^4.8.1
   firebase_core: ^2.24.0
   intl: ^0.19.0
+  shared_preferences: ^2.2.2
+  jwt_decode: ^0.3.1
 
 dev_dependencies:
   flutter_test:
